--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://demo.linkedevil.com"
+baseurl = "https://linkedevil.com/hugo/"
 languageCode = "en-us"
 paginate = 5
 title = "LinkedEvil"
